--- a/games/resources/css/styles.css
+++ b/games/resources/css/styles.css
@@ -519,11 +519,11 @@ img::-moz-selection {
 }
 
 #trailer {
-    margin-top: 100px;
+    margin-top: 20px;
 }
 
 #thankyou {
-    margin-bottom: 100px;
+    padding-bottom: 100px;
 }
 
 .download {
